# gpt-oss-120b-blockwise-h100

./: .gitignore  DECISIONS.md  H100_RUNPOD_GPT_OSS_20B_BLOCKWISE_GPTQ_AGENT_HANDOFF.md  KNOWN_ISSUES.md  PROGRESS.md  README.md
blockwise-gptq-main/: .gitignore  README.md  benchmark_results.txt  requirements.txt
blockwise-gptq-main/opteam-blockwise-gptq/: __init__.py  apply.py  calibration.py  (+8 more)
docs/: ARCHITECTURE.md  DEQUANTIZATION_PROVENANCE.md  EXPERIMENT_DESIGN.md  REPORT.md  TROUBLESHOOTING.md  UPSTREAM_ISSUE_VLLM_MARLIN_MOE.md  VLLM_NVFP4_CONTRACT.md
envs/: quant-requirements.in  quant-requirements.lock.txt  serve-requirements.in  serve-requirements.lock.txt  system-manifest.txt
results/: dequant_validation.json  stage5_full.json
scripts/: aggregate_serving_final.py  aggregate_serving_results.py  bootstrap_quant_env.sh  bootstrap_serve_env.sh  build_nvfp4_fixture.py  build_rtn_control.py  capture_system_manifest.sh  dequantize_gpt_oss_20b.py  download_official_model.py  fixture_load_test.py  fixture_numeric_check.py  logit_eval.py  make_qdq_reference.py  marlin_replay.py  marlin_replay2.py  marlin_replay3.py  marlin_replay4.py  pilot_serving_check.py  run_evals_and_benchmarks.sh  run_full.sh  run_pilot.sh  run_serving_benchmarks.sh  serve_vllm.sh  serving_benchmark.py  task_eval.py  upstream_repro_marlin_moe_topk.py  validate_dequantized_source.py
vllm-gptoss-nvfp4-plugin/: pyproject.toml
vllm-gptoss-nvfp4-plugin/vllm_gptoss_nvfp4/: __init__.py
vllm-gptoss-nvfp4-plugin/vllm_gptoss_nvfp4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+196 files in other folders)
